@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2020, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2020, 2022, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -23,6 +23,7 @@
 
 /*
  * @test
+ * @enablePreview
  * @requires ((os.arch == "amd64" | os.arch == "x86_64") & sun.arch.data.model == "64") | os.arch == "aarch64"
  * @run testng/othervm --enable-native-access=ALL-UNNAMED StdLibTest
  */
@@ -45,7 +46,7 @@ import java.util.function.Function;
 import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
-import jdk.incubator.foreign.*;
+import java.lang.foreign.*;
 
 import org.testng.annotations.*;
 
@@ -54,7 +55,7 @@ import static org.testng.Assert.*;
 @Test
 public class StdLibTest extends NativeTestHelper {
 
-    final static CLinker abi = CLinker.systemCLinker();
+    final static Linker abi = Linker.nativeLinker();
 
     private StdLibHelper stdLibHelper = new StdLibHelper();
 
@@ -151,36 +152,37 @@ public class StdLibTest extends NativeTestHelper {
 
     static class StdLibHelper {
 
-        final static MethodHandle strcat = abi.downcallHandle(abi.lookup("strcat").get(),
+        final static MethodHandle strcat = abi.downcallHandle(abi.defaultLookup().lookup("strcat").get(),
                 FunctionDescriptor.of(C_POINTER, C_POINTER, C_POINTER))
                 .asType(MethodType.methodType(MemoryAddress.class, MemorySegment.class, MemorySegment.class)); // exact signature match
 
-        final static MethodHandle strcmp = abi.downcallHandle(abi.lookup("strcmp").get(),
+
+        final static MethodHandle strcmp = abi.downcallHandle(abi.defaultLookup().lookup("strcmp").get(),
                 FunctionDescriptor.of(C_INT, C_POINTER, C_POINTER));
 
-        final static MethodHandle puts = abi.downcallHandle(abi.lookup("puts").get(),
+        final static MethodHandle puts = abi.downcallHandle(abi.defaultLookup().lookup("puts").get(),
                 FunctionDescriptor.of(C_INT, C_POINTER));
 
-        final static MethodHandle strlen = abi.downcallHandle(abi.lookup("strlen").get(),
+        final static MethodHandle strlen = abi.downcallHandle(abi.defaultLookup().lookup("strlen").get(),
                 FunctionDescriptor.of(C_INT, C_POINTER));
 
-        final static MethodHandle gmtime = abi.downcallHandle(abi.lookup("gmtime").get(),
+        final static MethodHandle gmtime = abi.downcallHandle(abi.defaultLookup().lookup("gmtime").get(),
                 FunctionDescriptor.of(C_POINTER, C_POINTER));
 
-        final static MethodHandle qsort = abi.downcallHandle(abi.lookup("qsort").get(),
+        final static MethodHandle qsort = abi.downcallHandle(abi.defaultLookup().lookup("qsort").get(),
                 FunctionDescriptor.ofVoid(C_POINTER, C_LONG_LONG, C_LONG_LONG, C_POINTER));
 
         final static FunctionDescriptor qsortComparFunction = FunctionDescriptor.of(C_INT, C_POINTER, C_POINTER);
 
         final static MethodHandle qsortCompar;
 
-        final static MethodHandle rand = abi.downcallHandle(abi.lookup("rand").get(),
+        final static MethodHandle rand = abi.downcallHandle(abi.defaultLookup().lookup("rand").get(),
                 FunctionDescriptor.of(C_INT));
 
-        final static MethodHandle vprintf = abi.downcallHandle(abi.lookup("vprintf").get(),
+        final static MethodHandle vprintf = abi.downcallHandle(abi.defaultLookup().lookup("vprintf").get(),
                 FunctionDescriptor.of(C_INT, C_POINTER, C_POINTER));
 
-        final static NativeSymbol printfAddr = abi.lookup("printf").get();
+        final static Addressable printfAddr = abi.defaultLookup().lookup("printf").get();
 
         final static FunctionDescriptor printfBase = FunctionDescriptor.of(C_INT, C_POINTER);
 
@@ -188,50 +190,46 @@ public class StdLibTest extends NativeTestHelper {
             try {
                 //qsort upcall handle
                 qsortCompar = MethodHandles.lookup().findStatic(StdLibTest.StdLibHelper.class, "qsortCompare",
-                        CLinker.upcallType(qsortComparFunction));
+                        Linker.upcallType(qsortComparFunction));
             } catch (ReflectiveOperationException ex) {
                 throw new IllegalStateException(ex);
             }
         }
 
         String strcat(String s1, String s2) throws Throwable {
-            try (ResourceScope scope = ResourceScope.newConfinedScope()) {
-                var malloc = SegmentAllocator.nativeAllocator(scope);
-                MemorySegment buf = malloc.allocate(s1.length() + s2.length() + 1);
+            try (MemorySession session = MemorySession.openConfined()) {
+                MemorySegment buf = session.allocate(s1.length() + s2.length() + 1);
                 buf.setUtf8String(0, s1);
-                MemorySegment other = malloc.allocateUtf8String(s2);
+                MemorySegment other = session.allocateUtf8String(s2);
                 return ((MemoryAddress)strcat.invokeExact(buf, other)).getUtf8String(0);
             }
         }
 
         int strcmp(String s1, String s2) throws Throwable {
-            try (ResourceScope scope = ResourceScope.newConfinedScope()) {
-                var malloc = SegmentAllocator.nativeAllocator(scope);
-                MemorySegment ns1 = malloc.allocateUtf8String(s1);
-                MemorySegment ns2 = malloc.allocateUtf8String(s2);
+            try (MemorySession session = MemorySession.openConfined()) {
+                MemorySegment ns1 = session.allocateUtf8String(s1);
+                MemorySegment ns2 = session.allocateUtf8String(s2);
                 return (int)strcmp.invoke(ns1, ns2);
             }
         }
 
         int puts(String msg) throws Throwable {
-            try (ResourceScope scope = ResourceScope.newConfinedScope()) {
-                var malloc = SegmentAllocator.nativeAllocator(scope);
-                MemorySegment s = malloc.allocateUtf8String(msg);
+            try (MemorySession session = MemorySession.openConfined()) {
+                MemorySegment s = session.allocateUtf8String(msg);
                 return (int)puts.invoke(s);
             }
         }
 
         int strlen(String msg) throws Throwable {
-            try (ResourceScope scope = ResourceScope.newConfinedScope()) {
-                var malloc = SegmentAllocator.nativeAllocator(scope);
-                MemorySegment s = malloc.allocateUtf8String(msg);
+            try (MemorySession session = MemorySession.openConfined()) {
+                MemorySegment s = session.allocateUtf8String(msg);
                 return (int)strlen.invoke(s);
             }
         }
 
         Tm gmtime(long arg) throws Throwable {
-            try (ResourceScope scope = ResourceScope.newConfinedScope()) {
-                MemorySegment time = MemorySegment.allocateNative(8, scope);
+            try (MemorySession session = MemorySession.openConfined()) {
+                MemorySegment time = session.allocate(8);
                 time.set(C_LONG_LONG, 0, arg);
                 return new Tm((MemoryAddress)gmtime.invoke(time));
             }
@@ -245,7 +243,7 @@ public class StdLibTest extends NativeTestHelper {
             static final long SIZE = 56;
 
             Tm(MemoryAddress addr) {
-                this.base = MemorySegment.ofAddress(addr, SIZE, ResourceScope.globalScope());
+                this.base = MemorySegment.ofAddress(addr, SIZE, MemorySession.global());
             }
 
             int sec() {
@@ -279,12 +277,11 @@ public class StdLibTest extends NativeTestHelper {
 
         int[] qsort(int[] arr) throws Throwable {
             //init native array
-            try (ResourceScope scope = ResourceScope.newConfinedScope()) {
-                var malloc = SegmentAllocator.nativeAllocator(scope);
-                MemorySegment nativeArr = malloc.allocateArray(C_INT, arr);
+            try (MemorySession session = MemorySession.openConfined()) {
+                MemorySegment nativeArr = session.allocateArray(C_INT, arr);
 
                 //call qsort
-                NativeSymbol qsortUpcallStub = abi.upcallStub(qsortCompar, qsortComparFunction, scope);
+                Addressable qsortUpcallStub = abi.upcallStub(qsortCompar, qsortComparFunction, session);
 
                 qsort.invoke(nativeArr, (long)arr.length, C_INT.byteSize(), qsortUpcallStub);
 
@@ -303,19 +300,17 @@ public class StdLibTest extends NativeTestHelper {
         }
 
         int printf(String format, List<PrintfArg> args) throws Throwable {
-            try (ResourceScope scope = ResourceScope.newConfinedScope()) {
-                var malloc = SegmentAllocator.nativeAllocator(scope);
-                MemorySegment formatStr = malloc.allocateUtf8String(format);
+            try (MemorySession session = MemorySession.openConfined()) {
+                MemorySegment formatStr = session.allocateUtf8String(format);
                 return (int)specializedPrintf(args).invoke(formatStr,
-                        args.stream().map(a -> a.nativeValue(scope)).toArray());
+                        args.stream().map(a -> a.nativeValue(session)).toArray());
             }
         }
 
         int vprintf(String format, List<PrintfArg> args) throws Throwable {
-            try (ResourceScope scope = ResourceScope.newConfinedScope()) {
-                var malloc = SegmentAllocator.nativeAllocator(scope);
-                MemorySegment formatStr = malloc.allocateUtf8String(format);
-                VaList vaList = VaList.make(b -> args.forEach(a -> a.accept(b, scope)), scope);
+            try (MemorySession session = MemorySession.openConfined()) {
+                MemorySegment formatStr = session.allocateUtf8String(format);
+                VaList vaList = VaList.make(b -> args.forEach(a -> a.accept(b, session)), session);
                 return (int)vprintf.invoke(formatStr, vaList);
             }
         }
@@ -389,26 +384,26 @@ public class StdLibTest extends NativeTestHelper {
                 .toArray(Object[][]::new);
     }
 
-    enum PrintfArg implements BiConsumer<VaList.Builder, ResourceScope> {
+    enum PrintfArg implements BiConsumer<VaList.Builder, MemorySession> {
 
-        INTEGRAL(int.class, C_INT, "%d", scope -> 42, 42, VaList.Builder::addVarg),
-        STRING(MemoryAddress.class, C_POINTER, "%s", scope -> {
-            var segment = MemorySegment.allocateNative(4, scope);
+        INTEGRAL(int.class, C_INT, "%d", session -> 42, 42, VaList.Builder::addVarg),
+        STRING(MemoryAddress.class, C_POINTER, "%s", session -> {
+            var segment = MemorySegment.allocateNative(4, session);
             segment.setUtf8String(0, "str");
             return segment.address();
         }, "str", VaList.Builder::addVarg),
-        CHAR(byte.class, C_CHAR, "%c", scope -> (byte) 'h', 'h', (builder, layout, value) -> builder.addVarg(C_INT, (int)value)),
-        DOUBLE(double.class, C_DOUBLE, "%.4f", scope ->1.2345d, 1.2345d, VaList.Builder::addVarg);
+        CHAR(byte.class, C_CHAR, "%c", session -> (byte) 'h', 'h', (builder, layout, value) -> builder.addVarg(C_INT, (int)value)),
+        DOUBLE(double.class, C_DOUBLE, "%.4f", session ->1.2345d, 1.2345d, VaList.Builder::addVarg);
 
         final Class<?> carrier;
         final ValueLayout layout;
         final String format;
-        final Function<ResourceScope, ?> nativeValueFactory;
+        final Function<MemorySession, ?> nativeValueFactory;
         final Object javaValue;
         @SuppressWarnings("rawtypes")
         final VaListBuilderCall builderCall;
 
-        <Z, L extends ValueLayout> PrintfArg(Class<?> carrier, L layout, String format, Function<ResourceScope, Z> nativeValueFactory, Object javaValue, VaListBuilderCall<Z, L> builderCall) {
+        <Z, L extends ValueLayout> PrintfArg(Class<?> carrier, L layout, String format, Function<MemorySession, Z> nativeValueFactory, Object javaValue, VaListBuilderCall<Z, L> builderCall) {
             this.carrier = carrier;
             this.layout = layout;
             this.format = format;
@@ -419,16 +414,16 @@ public class StdLibTest extends NativeTestHelper {
 
         @Override
         @SuppressWarnings("unchecked")
-        public void accept(VaList.Builder builder, ResourceScope scope) {
-            builderCall.build(builder, layout, nativeValueFactory.apply(scope));
+        public void accept(VaList.Builder builder, MemorySession session) {
+            builderCall.build(builder, layout, nativeValueFactory.apply(session));
         }
 
         interface VaListBuilderCall<V, L> {
             void build(VaList.Builder builder, L layout, V value);
         }
 
-        public Object nativeValue(ResourceScope scope) {
-            return nativeValueFactory.apply(scope);
+        public Object nativeValue(MemorySession session) {
+            return nativeValueFactory.apply(session);
         }
     }
 
