@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2012, 2016, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2012, 2022, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -95,8 +95,8 @@ import static org.testng.Assert.assertEquals;
  */
 @Test
 public class TestTextParserWithLocale extends AbstractTestPrinterParser {
-    static final Locale RUSSIAN = new Locale("ru");
-    static final Locale FINNISH = new Locale("fi");
+    static final Locale RUSSIAN = Locale.of("ru");
+    static final Locale FINNISH = Locale.of("fi");
 
     @DataProvider(name="parseDayOfWeekText")
     Object[][] providerDayOfWeekData() {
